--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone .. & cd dogoGPT\n",
+    "!git clone https://github.com/Kinyugo/dogoGPT.git & cd dogoGPT\n",
     "%pip install -q -r notebook_requirements.txt"
    ]
   },
