Fix: Imports and cd command

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -39,7 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/Kinyugo/dogoGPT.git & cd dogoGPT\n",
+    "!git clone https://github.com/Kinyugo/dogoGPT.git "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd dogoGPT\n",
     "%pip install -q -r notebook_requirements.txt"
    ]
   },
