Fix: Device issues

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# dogoGPT Training"
+    "# dogoGPT Training\n"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GPU Check"
+    "## GPU Check\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Setup\n"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Imports\n"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "from omegaconf import OmegaConf\n",
     "\n",
     "from dogogpt.configs import TrainingConfig\n",
-    "from dogogpt.training import run_training"
+    "from dogogpt.training import run_training\n"
    ]
   },
   {
@@ -91,11 +91,13 @@
     "    \"datamodule\": {\n",
     "        \"src_path\": \"shakespeare.txt\",\n",
     "        \"num_chars\": 256,\n",
+    "        \"batch_size\": 32,\n",
+    "        \"num_workers\": 2,\n",
+    "        \"pin_memory\": True,\n",
     "    },\n",
-    "    \"datamodule\": {\"batch_size\": 32, \"num_workers\": 2, \"pin_memory\": True},\n",
     "    \"lit_language_model\": {\"sample_every_n_steps\": 1000},\n",
-    "    \"trainer\": {\"max_epochs\": 2}\n",
-    "}"
+    "    \"trainer\": {\"max_epochs\": 2},\n",
+    "}\n"
    ]
   },
   {
@@ -106,7 +108,7 @@
    "source": [
     "default_config = OmegaConf.structured(TrainingConfig)\n",
     "custom_config = OmegaConf.create(dict_config)\n",
-    "config = OmegaConf.merge(default_config, custom_config)"
+    "config = OmegaConf.merge(default_config, custom_config)\n"
    ]
   },
   {
@@ -125,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_training(config)"
+    "run_training(config)\n"
    ]
   }
  ],
