Feature: Add sampling section

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -58,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://storage.googleapis.com/download.tensorflow.org/data/shakespeare.txt"
+    "!wget https://storage.googleapis.com/download.tensorflow.org/data/shakespeare.txt # shakespeare\n",
+    "!wget https://raw.githubusercontent.com/Kinyugo/Walks_Into_A_Bar_Language_Model/master/data/walks_into_a_bar.txt -O bar_jokes.txt # bar jokes"
    ]
   },
   {
@@ -75,10 +76,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "from omegaconf import OmegaConf\n",
     "\n",
     "from dogogpt.configs import TrainingConfig\n",
+    "from dogogpt.language_model import LanguageModel\n",
     "from dogogpt.training import run_training\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n"
    ]
   },
   {
@@ -96,7 +107,7 @@
     "        \"pin_memory\": True,\n",
     "    },\n",
     "    \"lit_language_model\": {\"sample_every_n_steps\": 1000},\n",
-    "    \"trainer\": {\"max_epochs\": 2},\n",
+    "    \"trainer\": {\"max_steps\": 10001},\n",
     "}\n"
    ]
   },
@@ -128,6 +139,53 @@
    "outputs": [],
    "source": [
     "run_training(config)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sampling\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_path = \"\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "lm = LanguageModel.from_pretrained(ckpt_path, device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\"\\n\"]\n",
+    "samples = lm(\n",
+    "    prompts,\n",
+    "    num_tokens=512,\n",
+    "    context_size=256,\n",
+    "    temperature=1.0,\n",
+    "    top_k=None,\n",
+    "    num_parallel_tokens=1,\n",
+    "    verbose=True,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "separator = \"-\" * 20\n",
+    "print(f\"\\n{separator}\\n\".join(samples))\n"
    ]
   }
  ],
